[gd_scene load_steps=7 format=3 uid="uid://8f0fd45ds7ap"]

[ext_resource type="Script" uid="uid://gtbhh2r2yhyc" path="res://scripts/player.gd" id="1"]

[sub_resource type="CapsuleShape3D" id="1"]

[sub_resource type="StandardMaterial3D" id="2"]
albedo_color = Color(0.2, 0.4, 0.8, 1)

[sub_resource type="CapsuleMesh" id="3"]

[sub_resource type="SphereShape3D" id="4"]
radius = 5.0

[sub_resource type="StandardMaterial3D" id="5"]
transparency = 1
albedo_color = Color(0.2, 0.8, 0.4, 0.2)
emission_enabled = true
emission = Color(0.2, 0.8, 0.4, 0.3)
emission_energy_multiplier = 0.5

[node name="Player" type="CharacterBody3D"]
collision_mask = 3
script = ExtResource("1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
material_override = SubResource("2")
mesh = SubResource("3")

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.5, -0.3)
radius = 0.1
height = 0.6
material = SubResource("2")

[node name="CSGSphere3D" type="CSGSphere3D" parent="MeshInstance3D/CSGCylinder3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
radius = 0.2
material = SubResource("2")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 12, 12)
current = true
fov = 60.0

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
autostart = true

[node name="AttackArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackArea"]
shape = SubResource("4")

[node name="CSGSphere3D" type="CSGSphere3D" parent="AttackArea"]
radius = 5.0
material = SubResource("5")
visible = true

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -50.0
offset_top = -20.0
offset_right = 50.0
offset_bottom = -10.0
theme_override_colors/font_color = Color(0, 0, 0, 0)
theme_override_colors/font_color_shadow = Color(0, 0, 0, 0)
value = 100.0
show_percentage = false

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
